--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/waves.css">
   <link rel="stylesheet" href="css/stylesheet.css">
@@ -16,12 +17,14 @@
     <div class="inner-header flex">
       <h1 class="header-h1">Gabriel Luis</h1>
       <h2 class="header-h2">Desarrollador de Software</h2>
-      <button class="button is-outlined is-rounded" id="btn-contact">
-        <span class="icon">
-          <i class="fa-solid fa-id-badge"></i>
-        </span>
-        <span>Contacto</span>
-      </button>
+      <a href="contact.html">
+        <button class="button is-outlined is-rounded" id="btn-contact">
+          <span class="icon">
+            <i class="fa-solid fa-id-badge"></i>
+          </span>
+          <span>Contacto</span>
+        </button>
+      </a>
     </div>
     <!--Waves Container-->
     <div>
@@ -45,19 +48,19 @@
     <div>
       <h1>Sobre mí</h1>
       <p>Soy un estudiante de ingeniería informática en la Universidad de La Laguna. Actualmente me encuentro cursando el cuarto curso</p>
-      <span class="badge"><img src="https://camo.githubusercontent.com/5859172b2d0854f4d70d35118ae1fbb8d92f967ea654f1bb1bdae4a346d03926/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f632d2532333030353939432e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d63266c6f676f436f6c6f723d7768697465" alt="C badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/891c1fd9d2ab2adf1053e8514f469b94049769ccd9d2765c8e06e9c1b6da1b8c/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f632b2b2d2532333030353939432e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d63253242253242266c6f676f436f6c6f723d7768697465" alt="C++ badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/49fbb99f92674cc6825349b154b65aaf4064aec465d61e8e1f9fb99da3d922a1/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f68746d6c352d2532334533344632362e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d68746d6c35266c6f676f436f6c6f723d7768697465" alt="HTML5 badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/e6b67b27998fca3bccf4c0ee479fc8f9de09d91f389cccfbe6cb1e29c10cfbd7/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f637373332d2532333135373242362e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d63737333266c6f676f436f6c6f723d7768697465" alt="CSS3 badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/aeddc848275a1ffce386dc81c04541654ca07b2c43bbb8ad251085c962672aea/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6a6176617363726970742d2532333332333333302e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d6a617661736372697074266c6f676f436f6c6f723d253233463744463145" alt="Javascript badge"></span>    
-      <span class="badge"><img src="https://camo.githubusercontent.com/ee71fcc1aa3d059265517741dffc4161922fd744377e7a5f07c43381d0aa9aac/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f747970657363726970742d2532333030374143432e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d74797065736372697074266c6f676f436f6c6f723d7768697465" alt="Typescript badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/3a1853bcde3555bc65ea48d85c4fe4abc44143c663ccab970765f0f9355e3588/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f45534c696e742d3442333236333f7374796c653d666f722d7468652d6261646765266c6f676f3d65736c696e74266c6f676f436f6c6f723d7768697465" alt="Eslint badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/7d7b100e379663ee40a20989e6c61737e6396c1dafc3a7c6d2ada8d4447eb0e4/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6e6f64652e6a732d3644413535463f7374796c653d666f722d7468652d6261646765266c6f676f3d6e6f64652e6a73266c6f676f436f6c6f723d7768697465" alt="NodeJs badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/c839570bc71901106b11b8411d9277a6a8356a9431e4a16d6c26db82caab7d62/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f4d6f6e676f44422d2532333465613934622e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d6d6f6e676f6462266c6f676f436f6c6f723d7768697465" alt="MongoDB badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/a1b2dac5667822ee0d98ae6d799da61987fd1658dfeb4d2ca6e3c99b1535ebd8/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f707974686f6e2d3336373041303f7374796c653d666f722d7468652d6261646765266c6f676f3d707974686f6e266c6f676f436f6c6f723d666664643534" alt="Python badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/5b61735c54b91b851198d6de978a3ff3f3f9b5c2428bd5ed7f28ced1c93a181c/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f727562792d2532334343333432442e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d72756279266c6f676f436f6c6f723d7768697465" alt="Ruby badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/b24523991dccb1991a2b8faa8dd97f48a0944157eacb7316b32834c2e070cf09/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f676f2d2532333030414444382e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d676f266c6f676f436f6c6f723d7768697465" alt="Go badge"></span>
-      <span class="badge"><img src="https://camo.githubusercontent.com/5a19333ccd9cc87637214d3a5c251c8fa43bf4e18ae84b1b4f78d150350a64c9/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f2d52617370626572727950692d4335314134413f7374796c653d666f722d7468652d6261646765266c6f676f3d5261737062657272792d5069" alt="Raspberry badge"></span>
+      <span class="badge"><img src="img/C-badge.svg" alt="C badge"></span>
+      <span class="badge"><img src="img/CPP-badge.svg" alt="C++ badge"></span>
+      <span class="badge"><img src="img/HTML5-badge.svg" alt="HTML5 badge"></span>
+      <span class="badge"><img src="img/CSS3-badge.svg" alt="CSS3 badge"></span>
+      <span class="badge"><img src="img/JAVASCRIPT-badge.svg" alt="Javascript badge"></span>    
+      <span class="badge"><img src="img/TYPESCRIPT-badge.svg" alt="Typescript badge"></span>
+      <span class="badge"><img src="img/ESLINT-badge.svg" alt="Eslint badge"></span>
+      <span class="badge"><img src="img/NODEJS-badge.svg" alt="NodeJs badge"></span>
+      <span class="badge"><img src="img/MONGODB-badge.svg" alt="MongoDB badge"></span>
+      <span class="badge"><img src="img/PYTHON-badge.svg" alt="Python badge"></span>
+      <span class="badge"><img src="img/RUBY-badge.svg" alt="Ruby badge"></span>
+      <span class="badge"><img src="img/GO-badge.svg" alt="Go badge"></span>
+      <span class="badge"><img src="img/RASPBERRYPI-badge.svg" alt="Raspberry badge"></span>
     </div>
 
     <!-- Projects -->
@@ -74,58 +77,7 @@
             </header>
             <div class="card-content">
               <div>
-                Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario
-                <progress class="progress is-small is-primary" value="100" max="100"></progress>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="#">
-            <header class="card-header is-shadowless">
-              <p class="card-header-title">
-                Sudoku Solver
-              </p>
-              <i class="fa-solid fa-code-branch"></i>
-            </header>
-            <div class="card-content">
-              <div>
-                Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum doloremque corrupti recusandae nobis perferendis illo fugit ex magnam dolorum! Reiciendis odit cumque error, officiis facilis ea atque aut iusto inventore!
-                <progress class="progress is-small is-primary" value="100" max="100"></progress>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="#">
-            <header class="card-header is-shadowless">
-              <p class="card-header-title">
-                Sudoku Solver
-              </p>
-              <i class="fa-solid fa-code-branch"></i>
-            </header>
-            <div class="card-content">
-              <div>
-                Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum doloremque corrupti recusandae nobis perferendis illo fugit ex magnam dolorum! Reiciendis odit cumque error, officiis facilis ea atque aut iusto inventore!
-                <progress class="progress is-small is-primary" value="100" max="100"></progress>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="card">
-          <a href="#">
-            <header class="card-header is-shadowless">
-              <p class="card-header-title">
-                Sudoku Solver
-              </p>
-              <i class="fa-solid fa-code-branch"></i>
-            </header>
-            <div class="card-content">
-              <div>
-                Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum doloremque corrupti recusandae nobis perferendis illo fugit ex magnam dolorum! Reiciendis odit cumque error, officiis facilis ea atque aut iusto inventore!
+                Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario. El programa cuenta con una interfaz de usuario que ofrece un tablero y diferentes modos de juego a resolver. El usuario introducirá los valores del tablero que desee resolver y el programa lo resolverá. La interfaz está implementada en Python, mientras que la lógica del tablero se ha implementado mediante el lenguaje declarativo Prolog.
                 <progress class="progress is-small is-info" value="100" max="100"></progress>
               </div>
             </div>
@@ -135,22 +87,51 @@
           <a href="#">
             <header class="card-header is-shadowless">
               <p class="card-header-title">
-                Sudoku Solver
+                Cipher Tools
               </p>
               <i class="fa-solid fa-code-branch"></i>
             </header>
             <div class="card-content">
               <div>
-                Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum doloremque corrupti recusandae nobis perferendis illo fugit ex magnam dolorum! Reiciendis odit cumque error, officiis facilis ea atque aut iusto inventore!
+                Proyecto mediante el cuál se ponen en común muchos de los cifrados más comunes, tanto del pasado como de la actualidad. El desarrollo se ha llevado a cabo mayormente en python, y en algunos casos, se dispone de interfaz gráfica.<br>El proyecto no está finalizado, pero se encuentra detenido en una fase de desarrollo.
+                <progress class="progress is-small is-info" max="100"></progress>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="#">
+            <header class="card-header is-shadowless">
+              <p class="card-header-title">
+                A Star Pathfinder
+              </p>
+              <i class="fa-solid fa-code-branch"></i>
+            </header>
+            <div class="card-content">
+              <div>
+                Implementación del algoritmo A* para el problema de la busqueda de la solución de un laberinto. El algoritmo se basa en diferentes eurísticas, como la distancia de Manhattan, la distancia Euclídea o la distancia de Chebyshev. <br>El desarrollo está realizado integramente en C++ como trabajo colaborativo con mis compañeras Dana Belén Choque y Stephanie Andreina.
+                <progress class="progress is-small is-info" value="100" max="100"></progress>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="#">
+            <header class="card-header is-shadowless">
+              <p class="card-header-title">
+                Maze Solver
+              </p>
+              <i class="fa-solid fa-code-branch"></i>
+            </header>
+            <div class="card-content">
+              <div>
+                Implementación de un algoritmo recursivo para la resolución de laberintos en C++. El algoritmo se basa en el algoritmo de la busqueda en profundidad, pero se aplica a un laberinto. <br>El desarrollo está realizado integramente en C++.
                 <progress class="progress is-small is-info" max="100">60%</progress>              </div>
             </div>
           </a>
         </div>
       </div>
     </div>
-
-    <!-- Skills -->
 
   </div>
   <!--Content ends-->
