about me updated

--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
     <!-- About me and badges -->
     <div>
       <h1>Sobre mí</h1>
-      <p>Soy un estudiante de ingeniería informática en la Universidad de La Laguna. Actualmente me encuentro cursando el cuarto curso</p>
+      <p>Soy un estudiante de ingeniería informática en la Universidad de La Laguna. Actualmente me encuentro cursando el cuarto curso. Desde que era niño me apasionaron los ordenadores, sobre todo por la cantidad de diversión que podían ofrecer, pero a medida que fuí creciendo, la diversión se convirtió en pasión por descubrir que era lo que movía aquel mundo en el que todo era posible a través de una pantalla.</p>
+      <p>Comencé a programar con 16 años. Cosas sencillas, sin mucho conocimiento de lo que realmente hacía, pero eso me ayudo a afianzar conocimientos antes de la carrera. Por último, en la carrera he obtenido conocimientos de múltiples ramas de la informática. Desde el diseño de la interfaz con el usuario hasta la programación a más bajo nivel trabajando directamente con el procesador de la máquina.</p>
       <span class="badge"><img src="img/C-badge.svg" alt="C badge"></span>
       <span class="badge"><img src="img/CPP-badge.svg" alt="C++ badge"></span>
       <span class="badge"><img src="img/HTML5-badge.svg" alt="HTML5 badge"></span>
       <span class="badge"><img src="img/CSS3-badge.svg" alt="CSS3 badge"></span>
-      <span class="badge"><img src="img/JAVASCRIPT-badge.svg" alt="Javascript badge"></span>    
+      <span class="badge"><img src="img/JAVASCRIPT-badge.svg" alt="Javascript badge"></span>
       <span class="badge"><img src="img/TYPESCRIPT-badge.svg" alt="Typescript badge"></span>
       <span class="badge"><img src="img/ESLINT-badge.svg" alt="Eslint badge"></span>
       <span class="badge"><img src="img/NODEJS-badge.svg" alt="NodeJs badge"></span>
@@ -94,7 +95,7 @@
             <div class="card-content">
               <div>
                 Proyecto mediante el cuál se ponen en común muchos de los cifrados más comunes, tanto del pasado como de la actualidad. El desarrollo se ha llevado a cabo mayormente en python, y en algunos casos, se dispone de interfaz gráfica.<br>El proyecto no está finalizado, pero se encuentra detenido en una fase de desarrollo.
-                <progress class="progress is-small is-info" max="100"></progress>
+                <progress class="progress is-small" max="100"></progress>
               </div>
             </div>
           </a>
@@ -126,7 +127,7 @@
             <div class="card-content">
               <div>
                 Implementación de un algoritmo recursivo para la resolución de laberintos en C++. El algoritmo se basa en el algoritmo de la busqueda en profundidad, pero se aplica a un laberinto. <br>El desarrollo está realizado integramente en C++.
-                <progress class="progress is-small is-info" max="100">60%</progress>              </div>
+                <progress class="progress is-small is-info" value="100" max="100">100%</progress>              </div>
             </div>
           </a>
         </div>
