--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bulma.min.css">
-  <link rel="stylesheet" href="css/waves.css">
+  <link rel="stylesheet" href="css/bulma.pur.css">
+  <link rel="stylesheet" href="css/waves.pur.css">
   <link rel="stylesheet" href="css/stylesheet.css">
-  <link rel="stylesheet" href="css/overBulma.css">
   <script src="https://kit.fontawesome.com/540a10185b.js" crossorigin="anonymous"></script>
   <title>Portfolio</title>
 </head>
