--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="description" content="Autor: Gabriel Luis, Portfolio personal como desarrollador de software">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bulma.pur.css">
-  <link rel="stylesheet" href="css/waves.pur.css">
+  <link rel="stylesheet" href="css/bulma.min.css">
+  <link rel="stylesheet" href="css/waves.css">
   <link rel="stylesheet" href="css/stylesheet.css">
   <script src="https://kit.fontawesome.com/540a10185b.js" crossorigin="anonymous"></script>
   <title>Portfolio</title>
@@ -17,14 +17,20 @@
     <div class="inner-header flex">
       <h1 class="header-h1">Gabriel Luis</h1>
       <h2 class="header-h2">Desarrollador de Software</h2>
-      <a href="contact.html">
-        <button class="button is-outlined is-rounded" id="btn-contact">
-          <span class="icon">
-            <i class="fa-solid fa-id-badge"></i>
-          </span>
-          <span>Contacto</span>
-        </button>
-      </a>
+      <div id="btn-contact">
+        <a href="contact.html">
+          <button class="button is-outlined is-rounded">
+            <span class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clipboard" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2" />
+                <rect x="9" y="3" width="6" height="4" rx="2" />
+              </svg>
+            </span>
+            <span>Contacto</span>
+          </button>
+        </a>
+      </div>
     </div>
     <!--Waves Container-->
     <div>
@@ -69,12 +75,14 @@
       <h1>Proyectos</h1>
       <div class="cards">
         <div class="card double-card">
-          <a href="#">
+          <a href="https://github.com/FNDme/Sudoku">
             <header class="card-header is-shadowless">
               <p class="card-header-title">
                 Sudoku Solver
               </p>
-              <i class="fa-solid fa-code-branch"></i>
+              <span class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              </span>
             </header>
             <div class="card-content">
               <div>
@@ -90,7 +98,7 @@
               <p class="card-header-title">
                 Cipher Tools
               </p>
-              <i class="fa-solid fa-code-branch"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
             </header>
             <div class="card-content">
               <div>
@@ -101,12 +109,12 @@
           </a>
         </div>
         <div class="card">
-          <a href="#">
+          <a href="https://github.com/FNDme/AStarPathfinder">
             <header class="card-header is-shadowless">
               <p class="card-header-title">
                 A Star Pathfinder
               </p>
-              <i class="fa-solid fa-code-branch"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
             </header>
             <div class="card-content">
               <div>
@@ -117,12 +125,12 @@
           </a>
         </div>
         <div class="card">
-          <a href="#">
+          <a href="https://github.com/FNDme/MazeSolver">
             <header class="card-header is-shadowless">
               <p class="card-header-title">
                 Maze Solver
               </p>
-              <i class="fa-solid fa-code-branch"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
             </header>
             <div class="card-content">
               <div>
