--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="description" content="Autor: Gabriel Luis, Portfolio personal como desarrollador de software">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bulma.min.css">
-  <link rel="stylesheet" href="css/waves.css">
+  <link rel="stylesheet" href="css/bulma.pur.css">
+  <link rel="stylesheet" href="css/waves.pur.css">
   <link rel="stylesheet" href="css/stylesheet.css">
   <script src="https://kit.fontawesome.com/540a10185b.js" crossorigin="anonymous"></script>
   <title>Portfolio</title>
@@ -80,9 +80,7 @@
               <p class="card-header-title">
                 Sudoku Solver
               </p>
-              <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
-              </span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
             </header>
             <div class="card-content">
               <div>
@@ -98,7 +96,7 @@
               <p class="card-header-title">
                 Cipher Tools
               </p>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
             </header>
             <div class="card-content">
               <div>
@@ -114,7 +112,7 @@
               <p class="card-header-title">
                 A Star Pathfinder
               </p>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
             </header>
             <div class="card-content">
               <div>
@@ -130,7 +128,7 @@
               <p class="card-header-title">
                 Maze Solver
               </p>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
             </header>
             <div class="card-content">
               <div>
