--- a/index_en.html
+++ b/index_en.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Autor: Gabriel Luis, Portfolio personal como desarrollador de software">
+  <meta name="description" content="Author: Gabriel Luis, Personal Portfolio as a software developer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bulma.pur.css">
@@ -15,9 +15,9 @@
     <!--Content before waves-->
     <div class="inner-header flex">
       <h1 class="header-h1">Gabriel Luis</h1>
-      <h2 class="header-h2">Desarrollador de Software</h2>
+      <h2 class="header-h2">Software Developer</h2>
       <div id="btn-contact">
-        <a href="contact.html">
+        <a href="contact_en.html">
           <button class="button is-outlined is-rounded">
             <span class="icon">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clipboard" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -26,7 +26,7 @@
                 <rect x="9" y="3" width="6" height="4" rx="2" />
               </svg>
             </span>
-            <span>Contacto</span>
+            <span>Contact</span>
           </button>
         </a>
       </div>
@@ -51,9 +51,9 @@
 
     <!-- About me and badges -->
     <div>
-      <h1>Sobre mí</h1>
-      <p>Soy un estudiante de <span class="important-text">ingeniería informática</span> en la Universidad de La Laguna. Actualmente me encuentro cursando el cuarto curso. Desde que era niño me apasionaron los ordenadores, sobre todo por la cantidad de diversión que podían ofrecer, pero a medida que fuí creciendo, la diversión se convirtió en pasión por descubrir que era lo que movía aquel mundo en el que todo era posible a través de una pantalla.</p>
-      <p>Comencé a programar con 16 años. Cosas sencillas, sin mucho conocimiento de lo que realmente hacía, pero eso me ayudo a afianzar conocimientos antes de la carrera. Por último, en la carrera he obtenido conocimientos de múltiples ramas de la informática. Desde el diseño de la interfaz con el usuario hasta la programación a más bajo nivel trabajando directamente con el procesador de la máquina.</p>
+      <h1>About me</h1>
+      <p>I am a <span class="important-text">computer engineering</span> student at the University of La Laguna. I am currently in my fourth year. Since I was a child I was passionate about computers, especially for the amount of fun they could offer, but as I grew up, the fun became a passion to discover what moved that world in which everything was possible through a screen.</p>
+      <p>I started programming when I was 16 years old. Simple things, without much knowledge of what I was really doing, but that helped me to consolidate my knowledge before the career. Finally, in the career I have gained knowledge of multiple branches of computer science. From the design of the user interface to the lowest level programming working directly with the CPU.</p>
       <span class="badge"><img src="img/C-badge.svg" alt="C badge"></span>
       <span class="badge"><img src="img/CPP-badge.svg" alt="C++ badge"></span>
       <span class="badge"><img src="img/HTML5-badge.svg" alt="HTML5 badge"></span>
@@ -71,7 +71,7 @@
 
     <!-- Projects -->
     <div>
-      <h1>Proyectos</h1>
+      <h1>Projects</h1>
       <div class="cards">
         <div class="card double-card">
           <a href="https://github.com/FNDme/Sudoku">
@@ -83,7 +83,7 @@
             </header>
             <div class="card-content">
               <div>
-                Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario. El programa cuenta con una interfaz de usuario que ofrece un tablero y diferentes modos de juego a resolver. El usuario introducirá los valores del tablero que desee resolver y el programa lo resolverá. La interfaz está implementada en Python, mientras que la lógica del tablero se ha implementado mediante el lenguaje declarativo Prolog.
+                Artificial Intelligence project using Prolog and Python to develop a desktop application capable of solving sudokus given by the user. The program has a user interface that offers a board and different game modes to solve. The user will enter the values of the board to be solved and the program will solve it. The interface is implemented in Python, while the board logic has been implemented using the declarative language Prolog.
                 <progress class="progress is-small is-info" value="100" max="100"></progress>
               </div>
             </div>
@@ -99,7 +99,7 @@
             </header>
             <div class="card-content">
               <div>
-                Proyecto mediante el cuál se ponen en común muchos de los cifrados más comunes, tanto del pasado como de la actualidad. El desarrollo se ha llevado a cabo mayormente en python, y en algunos casos, se dispone de interfaz gráfica.<br>El proyecto no está finalizado, pero se encuentra detenido en una fase de desarrollo.
+                Project in which many of the most common ciphers, both past and present, are put together. The development has been carried out mostly in Python, and in some cases, a graphical interface is available.<br>The project is not finished, but is stopped in a development phase.
                 <progress class="progress is-small" max="100"></progress>
               </div>
             </div>
@@ -115,7 +115,7 @@
             </header>
             <div class="card-content">
               <div>
-                Implementación del algoritmo A* para el problema de la busqueda de la solución de un laberinto. El algoritmo se basa en diferentes eurísticas, como la distancia de Manhattan, la distancia Euclídea o la distancia de Chebyshev. <br>El desarrollo está realizado integramente en C++ como trabajo colaborativo con mis compañeras Dana Belén Choque y Stephanie Andreina.
+                A* algorithm implementation for the problem of finding the solution of a labyrinth. The algorithm is based on different euristics, such as the Manhattan distance, the Euclidean distance or the Chebyshev distance. <br>The development is done entirely in C++ as a collaborative work with my colleagues Dana Belén Choque and Stephanie Andreina.
                 <progress class="progress is-small is-info" value="100" max="100"></progress>
               </div>
             </div>
@@ -131,8 +131,9 @@
             </header>
             <div class="card-content">
               <div>
-                Implementación de un algoritmo recursivo para la resolución de laberintos en C++. El algoritmo se basa en el algoritmo de la busqueda en profundidad, pero se aplica a un laberinto. <br>El desarrollo está realizado integramente en C++.
-                <progress class="progress is-small is-info" value="100" max="100">100%</progress>              </div>
+                Implementation of a recursive algorithm for solving mazes in C++. The algorithm is based on the depth-first search algorithm applied to a maze. <br>The development is done entirely in C++.
+                <progress class="progress is-small is-info" value="100" max="100">100%</progress>
+              </div>
             </div>
           </a>
         </div>
