branch icon updated

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
               <p class="card-header-title">
                 Sudoku Solver
               </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
-            </header>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>            </header>
             <div class="card-content">
               <div>
                 Proyecto de Inteligencia Artificial en el que se hace uso de Prolog y Python para desarrollar una aplicación de escritorio capaz de resolver sudokus dados por el usuario. El programa cuenta con una interfaz de usuario que ofrece un tablero y diferentes modos de juego a resolver. El usuario introducirá los valores del tablero que desee resolver y el programa lo resolverá. La interfaz está implementada en Python, mientras que la lógica del tablero se ha implementado mediante el lenguaje declarativo Prolog.
@@ -95,8 +94,7 @@
               <p class="card-header-title">
                 Cipher Tools
               </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
-            </header>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>            </header>
             <div class="card-content">
               <div>
                 Proyecto mediante el cuál se ponen en común muchos de los cifrados más comunes, tanto del pasado como de la actualidad. El desarrollo se ha llevado a cabo mayormente en python, y en algunos casos, se dispone de interfaz gráfica.<br>El proyecto no está finalizado, pero se encuentra detenido en una fase de desarrollo.
@@ -111,8 +109,7 @@
               <p class="card-header-title">
                 A Star Pathfinder
               </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
-            </header>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>            </header>
             <div class="card-content">
               <div>
                 Implementación del algoritmo A* para el problema de la busqueda de la solución de un laberinto. El algoritmo se basa en diferentes eurísticas, como la distancia de Manhattan, la distancia Euclídea o la distancia de Chebyshev. <br>El desarrollo está realizado integramente en C++ como trabajo colaborativo con mis compañeras Dana Belén Choque y Stephanie Andreina.
@@ -127,8 +124,7 @@
               <p class="card-header-title">
                 Maze Solver
               </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
-            </header>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>            </header>
             <div class="card-content">
               <div>
                 Implementación de un algoritmo recursivo para la resolución de laberintos en C++. El algoritmo se basa en el algoritmo de la busqueda en profundidad, pero se aplica a un laberinto. <br>El desarrollo está realizado integramente en C++.
