--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/bulma.pur.css">
   <link rel="stylesheet" href="css/waves.pur.css">
   <link rel="stylesheet" href="css/stylesheet.css">
+  <script src="js/javascript.js" defer></script>
   <title>Portfolio</title>
 </head>
 <body>
@@ -135,5 +136,4 @@
 
   </div>
 </body>
-<script src="js/javascript.js"></script>
 </html>
