Solved header accesibility issue

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- About me and badges -->
     <div>
-      <h1>Sobre mí</h1>
+      <h2 class="content-header">Sobre mí</h2>
       <p>Soy un estudiante de <span class="important-text">ingeniería informática</span> en la Universidad de La Laguna. Actualmente me encuentro cursando el cuarto curso. Desde que era niño me apasionaron los ordenadores, sobre todo por la cantidad de diversión que podían ofrecer, pero a medida que fuí creciendo, la diversión se convirtió en pasión por descubrir que era lo que movía aquel mundo en el que todo era posible a través de una pantalla.</p>
       <p>Comencé a programar con 16 años. Cosas sencillas, sin mucho conocimiento de lo que realmente hacía, pero eso me ayudo a afianzar conocimientos antes de la carrera. Por último, en la carrera he obtenido conocimientos de múltiples ramas de la informática. Desde el diseño de la interfaz con el usuario hasta la programación a más bajo nivel trabajando directamente con el procesador de la máquina.</p>
       <span class="badge"><img src="img/C-badge.svg" alt="C badge"></span>
@@ -70,7 +70,7 @@
 
     <!-- Projects -->
     <div>
-      <h1>Proyectos</h1>
+      <h2 class="content-header">Proyectos</h2>
       <div class="cards">
         <div class="card double-card">
           <a href="https://github.com/FNDme/Sudoku">
