Default width setted

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
       <h2 class="content-header">Sobre mí</h2>
       <p>Soy un estudiante de <span class="important-text">ingeniería informática</span> en la Universidad de La Laguna. Actualmente me encuentro cursando el cuarto curso. Desde que era niño me apasionaron los ordenadores, sobre todo por la cantidad de diversión que podían ofrecer, pero a medida que fuí creciendo, la diversión se convirtió en pasión por descubrir que era lo que movía aquel mundo en el que todo era posible a través de una pantalla.</p>
       <p>Comencé a programar con 16 años. Cosas sencillas, sin mucho conocimiento de lo que realmente hacía, pero eso me ayudo a afianzar conocimientos antes de la carrera. Por último, en la carrera he obtenido conocimientos de múltiples ramas de la informática. Desde el diseño de la interfaz con el usuario hasta la programación a más bajo nivel trabajando directamente con el procesador de la máquina.</p>
-      <span class="badge"><img src="img/C-badge.svg" alt="C badge" height="28px"></span>
-      <span class="badge"><img src="img/CPP-badge.svg" alt="C++ badge" height="28p"></span>
-      <span class="badge"><img src="img/HTML5-badge.svg" alt="HTML5 badge" height="28p"></span>
-      <span class="badge"><img src="img/CSS3-badge.svg" alt="CSS3 badge" height="28p"></span>
-      <span class="badge"><img src="img/JAVASCRIPT-badge.svg" alt="Javascript badge" height="28p"></span>
-      <span class="badge"><img src="img/TYPESCRIPT-badge.svg" alt="Typescript badge" height="28p"></span>
-      <span class="badge"><img src="img/ESLINT-badge.svg" alt="Eslint badge" height="28p"></span>
-      <span class="badge"><img src="img/NODEJS-badge.svg" alt="NodeJs badge" height="28p"></span>
-      <span class="badge"><img src="img/MONGODB-badge.svg" alt="MongoDB badge" height="28p"></span>
-      <span class="badge"><img src="img/PYTHON-badge.svg" alt="Python badge" height="28p"></span>
-      <span class="badge"><img src="img/RUBY-badge.svg" alt="Ruby badge" height="28p"></span>
-      <span class="badge"><img src="img/GO-badge.svg" alt="Go badge" height="28p"></span>
-      <span class="badge"><img src="img/RASPBERRYPI-badge.svg" alt="Raspberry badge" height="28p"></span>
+      <span class="badge"><img src="img/C-badge.svg" alt="C badge" height="28" width="52.25"></span>
+      <span class="badge"><img src="img/CPP-badge.svg" alt="C++ badge" height="28" width="71.75"></span>
+      <span class="badge"><img src="img/HTML5-badge.svg" alt="HTML5 badge" height="28" width="88.25"></span>
+      <span class="badge"><img src="img/CSS3-badge.svg" alt="CSS3 badge" height="28" width="77"></span>
+      <span class="badge"><img src="img/JAVASCRIPT-badge.svg" alt="Javascript badge" height="28" width="126.5"></span>
+      <span class="badge"><img src="img/TYPESCRIPT-badge.svg" alt="Typescript badge" height="28" width="126.5"></span>
+      <span class="badge"><img src="img/ESLINT-badge.svg" alt="Eslint badge" height="28" width="92.5"></span>
+      <span class="badge"><img src="img/NODEJS-badge.svg" alt="NodeJs badge" height="28" width="100.75"></span>
+      <span class="badge"><img src="img/MONGODB-badge.svg" alt="MongoDB badge" height="28" width="110.75"></span>
+      <span class="badge"><img src="img/PYTHON-badge.svg" alt="Python badge" height="28" width="97.5"></span>
+      <span class="badge"><img src="img/RUBY-badge.svg" alt="Ruby badge" height="28" width="79"></span>
+      <span class="badge"><img src="img/GO-badge.svg" alt="Go badge" height="28" width="62.5"></span>
+      <span class="badge"><img src="img/RASPBERRYPI-badge.svg" alt="Raspberry badge" height="28" width="137.75"></span>
     </div>
 
     <!-- Projects -->
