--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/bulma.pur.css">
   <link rel="stylesheet" href="css/waves.pur.css">
   <link rel="stylesheet" href="css/stylesheet.css">
-  <script src="js/javascript.js" defer></script>
+  <script src="dist/index.js" defer></script>
   <title>Portfolio</title>
 </head>
 <body>
