Added last paragraph to About Me

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <div>
       <h2 class="content-header">Sobre mí</h2>
       <p>Soy un estudiante de <span class="important-text">ingeniería informática</span> en la Universidad de La Laguna. Actualmente me encuentro cursando el cuarto curso. Desde que era niño me apasionaron los ordenadores, sobre todo por la cantidad de diversión que podían ofrecer, pero a medida que fuí creciendo, la diversión se convirtió en pasión por descubrir que era lo que movía aquel mundo en el que todo era posible a través de una pantalla.</p>
-      <p>Comencé a programar con 16 años. Cosas sencillas, sin mucho conocimiento de lo que realmente hacía, pero eso me ayudo a afianzar conocimientos antes de la carrera. Por último, en la carrera he obtenido conocimientos de múltiples ramas de la informática. Desde el diseño de la interfaz con el usuario hasta la programación a más bajo nivel trabajando directamente con el procesador de la máquina.</p>
+      <p>Comencé a programar con 16 años, cosas sencillas, sin mucho conocimiento de lo que realmente hacía, pero eso me ayudo a afianzar conocimientos antes de la carrera. Por último, en la carrera he obtenido conocimientos de múltiples ramas de la informática. Desde el diseño de la interfaz con el usuario hasta la programación a más bajo nivel trabajando directamente con el procesador de la máquina.</p>
+      <p>Comencé con C y C++, y desde los conocimientos adquiridos con esos lenguajes, conseguí adaptarme rápidamente a otros lenguajes, sobretodo Python y Javascript/Typescript. Con estos últimos, además de los conocimientos de programación, he adquirido conocimientos en diferentes herramientas como Node o Eslint, la conexión con bases de datos, relacionales o no, etcétera</p>
       <span class="badge"><img src="img/C-badge.svg" alt="C badge" height="28" width="52.25"></span>
       <span class="badge"><img src="img/CPP-badge.svg" alt="C++ badge" height="28" width="71.75"></span>
       <span class="badge"><img src="img/HTML5-badge.svg" alt="HTML5 badge" height="28" width="88.25"></span>
@@ -130,7 +131,7 @@
             </header>
             <div class="card-content">
               <div>
-                <p>Implementación de un algoritmo recursivo para la resolución de laberintos en C++. El algoritmo se basa en el algoritmo de la busqueda en profundidad, pero se aplica a un laberinto. <br>El desarrollo está realizado integramente en C++.</p>
+                <p>Implementación de un algoritmo recursivo para la resolución de laberintos. El algoritmo se basa en el algoritmo de la busqueda en profundidad aplicado a un laberinto de dos dimensiones. <br>El desarrollo está realizado integramente en C++.</p>
                 <progress class="progress is-small is-info" value="100" max="100">100%</progress>              </div>
             </div>
           </a>
