Added contact page

--- a/index_en.html
+++ b/index_en.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/bulma.pur.css">
   <link rel="stylesheet" href="css/waves.pur.css">
   <link rel="stylesheet" href="css/stylesheet.css">
+  <script src="dist/index.js" defer></script>
   <title>Portfolio</title>
 </head>
 <body>
@@ -15,20 +16,18 @@
     <!--Content before waves-->
     <div class="inner-header flex">
       <h1 class="header-h1">Gabriel Luis</h1>
-      <h2 class="header-h2">Software Developer</h2>
-      <div id="btn-contact">
-        <a href="contact_en.html">
-          <button class="button is-outlined is-rounded">
-            <span class="icon">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clipboard" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2" />
-                <rect x="9" y="3" width="6" height="4" rx="2" />
-              </svg>
-            </span>
-            <span>Contact</span>
-          </button>
-        </a>
+      <h2 class="header-h2">Software developer</h2>
+      <div id="btn-contact-div">
+        <button class="button is-outlined is-rounded" id="btn-contact">
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clipboard" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M9 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2h-2" />
+              <rect x="9" y="3" width="6" height="4" rx="2" />
+            </svg>
+          </span>
+          <span>Contact</span>
+        </button>
       </div>
     </div>
     <!--Waves Container-->
@@ -54,6 +53,7 @@
       <h1>About me</h1>
       <p>I am a <span class="important-text">computer engineering</span> student at the University of La Laguna. I am currently in my fourth year. Since I was a child I was passionate about computers, especially for the amount of fun they could offer, but as I grew up, the fun became a passion to discover what moved that world in which everything was possible through a screen.</p>
       <p>I started programming when I was 16 years old. Simple things, without much knowledge of what I was really doing, but that helped me to consolidate my knowledge before the career. Finally, in the career I have gained knowledge of multiple branches of computer science. From the design of the user interface to the lowest level programming working directly with the CPU.</p>
+      <p>I started with C and C++, and from the knowledge acquired with those languages, I managed to adapt quickly to other languages, especially Python and Javascript/Typescript. With the latter, in addition to programming knowledge, I have acquired knowledge in different tools such as Node or Eslint, the connection with databases, relational or not, etcetera.</p>
       <span class="badge"><img src="img/C-badge.svg" alt="C badge"></span>
       <span class="badge"><img src="img/CPP-badge.svg" alt="C++ badge"></span>
       <span class="badge"><img src="img/HTML5-badge.svg" alt="HTML5 badge"></span>
