--- a/contact_en.html
+++ b/contact_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Autor: Gabriel Luis, Portfolio personal como desarrollador de software">
@@ -38,27 +38,27 @@
             <path d="M18 18V7.132l-8-4.8-8 4.8V18h4v-2.75a4 4 0 1 1 8 0V18h4zm-6 2v-4.75a2 2 0 1 0-4 0V20H2a2 2 0 0 1-2-2V7.132a2 2 0 0 1 .971-1.715l8-4.8a2 2 0 0 1 2.058 0l8 4.8A2 2 0 0 1 20 7.132V18a2 2 0 0 1-2 2h-6z"></path>
           </svg>
         </span>
-        <span>Inicio</span>
+        <span>Home</span>
       </button>
     </div>
     <div>
-      <h2 class="content-header">Datos de contacto</h2>
+      <h2 class="content-header">Contact</h2>
       <div class="content-body">
         <div class="content-body-text">
           <p>
-            <strong>Nombre:</strong> Gabriel Luis
+            <strong>Name:</strong> Gabriel Luis
           </p>
           <p>
-            <strong>Correo:</strong> <a href="mailto:gabiluisfreitas@gmail.com">gabiluisfreitas@gmail.com</a>
+            <strong>Email:</strong> <a href="mailto:gabiluisfreitas@gmail.com">gabiluisfreitas@gmail.com</a>
           </p>
           <p>
-            <strong>Teléfono:</strong> <a href="tel:+34 636 03 93 06">+34 636 03 93 06</a>
+            <strong>Phone:</strong> <a href="tel:+34 636 03 93 06">+34 636 03 93 06</a>
           </p>
         </div>
     </div>
     <!-- Social media -->
     <div>
-      <h2 class="content-header">Redes sociales</h2>
+      <h2 class="content-header">Social media</h2>
       <div class="content-body">
         <div class="content-body-text">
           <p>
