Added language button

--- a/index_en.html
+++ b/index_en.html
@@ -29,6 +29,21 @@
           <span>Contact</span>
         </button>
       </div>
+      <div id="btn-language-div">
+        <button class="button is-outlined is-rounded" id="btn-language">
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-language" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M4 5h7" />
+              <path d="M9 3v2c0 4.418 -2.239 8 -5 8" />
+              <path d="M5 9c-.003 2.144 2.952 3.908 6.7 4" />
+              <path d="M12 20l4 -9l4 9" />
+              <path d="M19.1 18h-6.2" />
+            </svg>
+          </span>
+          <span>Español</span>
+        </button>
+      </div>
     </div>
     <!--Waves Container-->
     <div>
@@ -68,22 +83,21 @@
       <span class="badge"><img src="img/GO-badge.svg" alt="Go badge"></span>
       <span class="badge"><img src="img/RASPBERRYPI-badge.svg" alt="Raspberry badge"></span>
     </div>
-
     <!-- Projects -->
     <div>
-      <h1>Projects</h1>
+      <h2 class="content-header">Projects</h2>
       <div class="cards">
         <div class="card double-card">
           <a href="https://github.com/FNDme/Sudoku">
             <header class="card-header is-shadowless">
-              <p class="card-header-title">
+              <h3 class="card-header-title">
                 Sudoku Solver
-              </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              </h3>
+              <svg xmlns="http://www.w3.org/2000/svg" class="project-icon" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>
             </header>
             <div class="card-content">
               <div>
-                Artificial Intelligence project using Prolog and Python to develop a desktop application capable of solving sudokus given by the user. The program has a user interface that offers a board and different game modes to solve. The user will enter the values of the board to be solved and the program will solve it. The interface is implemented in Python, while the board logic has been implemented using the declarative language Prolog.
+                <p>Artificial Intelligence project using Prolog and Python to develop a desktop application capable of solving sudokus given by the user. The program has a user interface that offers a board and different game modes to solve. The user will enter the values of the board to be solved and the program will solve it. The interface is implemented in Python, while the board logic has been implemented using the declarative language Prolog.</p>
                 <progress class="progress is-small is-info" value="100" max="100"></progress>
               </div>
             </div>
@@ -92,14 +106,14 @@
         <div class="card">
           <a href="#">
             <header class="card-header is-shadowless">
-              <p class="card-header-title">
+              <h3 class="card-header-title">
                 Cipher Tools
-              </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              </h3>
+              <svg xmlns="http://www.w3.org/2000/svg" class="project-icon" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>
             </header>
             <div class="card-content">
               <div>
-                Project in which many of the most common ciphers, both past and present, are put together. The development has been carried out mostly in Python, and in some cases, a graphical interface is available.<br>The project is not finished, but is stopped in a development phase.
+                <p>Project in which many of the most common ciphers, both past and present, are put together. The development has been carried out mostly in Python, and in some cases, a graphical interface is available.<br>The project is not finished, but is stopped in a development phase.</p>
                 <progress class="progress is-small" max="100"></progress>
               </div>
             </div>
@@ -108,14 +122,14 @@
         <div class="card">
           <a href="https://github.com/FNDme/AStarPathfinder">
             <header class="card-header is-shadowless">
-              <p class="card-header-title">
+              <h3 class="card-header-title">
                 A Star Pathfinder
-              </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              </h3>
+              <svg xmlns="http://www.w3.org/2000/svg" class="project-icon" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>
             </header>
             <div class="card-content">
               <div>
-                A* algorithm implementation for the problem of finding the solution of a labyrinth. The algorithm is based on different euristics, such as the Manhattan distance, the Euclidean distance or the Chebyshev distance. <br>The development is done entirely in C++ as a collaborative work with my colleagues Dana Belén Choque and Stephanie Andreina.
+                <p>A* algorithm implementation for the problem of finding the solution of a labyrinth. The algorithm is based on different euristics, such as the Manhattan distance, the Euclidean distance or the Chebyshev distance. <br>The development is done entirely in C++ as a collaborative work with my colleagues Dana Belén Choque and Stephanie Andreina.</p>
                 <progress class="progress is-small is-info" value="100" max="100"></progress>
               </div>
             </div>
@@ -124,23 +138,19 @@
         <div class="card">
           <a href="https://github.com/FNDme/MazeSolver">
             <header class="card-header is-shadowless">
-              <p class="card-header-title">
+              <h3 class="card-header-title">
                 Maze Solver
-              </p>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -1.5 24 24" width="24" fill="currentColor"><path d="M4 11.856v3.173a3.001 3.001 0 1 1-2 0V6.687a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V6.699A3.001 3.001 0 0 1 13 .858a3 3 0 0 1 1.033 5.817V7.85a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1z"></path></svg>
+              </h2>
+              <svg xmlns="http://www.w3.org/2000/svg" class="project-icon" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>
             </header>
             <div class="card-content">
               <div>
-                Implementation of a recursive algorithm for solving mazes in C++. The algorithm is based on the depth-first search algorithm applied to a maze. <br>The development is done entirely in C++.
-                <progress class="progress is-small is-info" value="100" max="100">100%</progress>
-              </div>
+                <p>Implementation of a recursive algorithm for solving mazes in C++. The algorithm is based on the depth-first search algorithm applied to a maze. <br>The development is done entirely in C++.</p>
+                <progress class="progress is-small is-info" value="100" max="100">100%</progress>              </div>
             </div>
           </a>
         </div>
       </div>
     </div>
-
-  </div>
-  <!--Content ends-->
-</body>
+  </body>
 </html>
