--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
   <div class="header">
     <!--Content before waves-->
     <div class="inner-header flex">
+      <div id="btn-language-div">
+        <button class="button is-outlined is-rounded" id="btn-language">
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-language" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M4 5h7" />
+              <path d="M9 3v2c0 4.418 -2.239 8 -5 8" />
+              <path d="M5 9c-.003 2.144 2.952 3.908 6.7 4" />
+              <path d="M12 20l4 -9l4 9" />
+              <path d="M19.1 18h-6.2" />
+            </svg>
+          </span>
+          <span>English</span>
+        </button>
+      </div>
       <h1 class="header-h1">Gabriel Luis</h1>
       <h2 class="header-h2">Desarrollador de Software</h2>
       <div id="btn-contact-div">
@@ -138,7 +153,5 @@
         </div>
       </div>
     </div>
-
-  </div>
 </body>
 </html>
