--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
     <!-- Projects -->
     <div>
       <h2 class="content-header">Proyectos</h2>
+      <div class="card double-card">
+        <a href="https://github.com/FNDme/Recommender-System">
+          <header class="card-header is-shadowless">
+            <h3 class="card-header-title">
+              Recommender system
+            </h2>
+            <svg xmlns="http://www.w3.org/2000/svg" class="project-icon" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>
+          </header>
+          <div class="card-content">
+            <div>
+              <p>Un sistema recomendador basado en filtrado colaborativo, en el cual, dada una matriz con las valoraciones de multiples usuario <i>i</i> sobre el item <i>j</i>, busca rellenar los vacíos que posea la matriz, ofreciendo así una recomendación de items a cada usuario.
+                <br>Con esto, se busca poder hacer una aproximación de la valoración que realizaría el usuario, lo más precisa posible a la realidad, para así poder seleccionar a posteriori, los items que al usuario le va a interesar más, y así conseguir una mayor satisfacción del usuario.
+                <br>El desarrollo está realizado en typescript y posee una interfaz de usuario web.</p>
+              <progress class="progress is-small is-info" value="100" max="100">100%</progress>              </div>
+          </div>
+        </a>
+      </div>
       <div class="cards">
         <div class="card double-card">
           <a href="https://github.com/FNDme/Sudoku">
