Added english version of recommender system

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
               <p>Un sistema recomendador basado en filtrado colaborativo, en el cual, dada una matriz con las valoraciones de multiples usuario <i>i</i> sobre el item <i>j</i>, busca rellenar los vacíos que posea la matriz, ofreciendo así una recomendación de items a cada usuario.
                 <br>Con esto, se busca poder hacer una aproximación de la valoración que realizaría el usuario, lo más precisa posible a la realidad, para así poder seleccionar a posteriori, los items que al usuario le va a interesar más, y así conseguir una mayor satisfacción del usuario.
                 <br>El desarrollo está realizado en typescript y posee una interfaz de usuario web.</p>
-              <progress class="progress is-small is-info" value="100" max="100">100%</progress>              </div>
+              <progress class="progress is-small is-info" value="100" max="100">100%</progress>
+            </div>
           </div>
         </a>
       </div>
