--- a/index_en.html
+++ b/index_en.html
@@ -86,6 +86,24 @@
     <!-- Projects -->
     <div>
       <h2 class="content-header">Projects</h2>
+      <div class="card double-card">
+        <a href="https://github.com/FNDme/Recommender-System">
+          <header class="card-header is-shadowless">
+            <h3 class="card-header-title">
+              Recommender system
+            </h2>
+            <svg xmlns="http://www.w3.org/2000/svg" class="project-icon" viewBox="-4 -2 24 24" width="24" fill="currentColor"><path d="M3 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm1-7.002v3.173a3.001 3.001 0 1 1-2 0V5.829a3.001 3.001 0 1 1 2 0v2.34c.312-.11.647-.17.997-.171l6.037-.006a1 1 0 0 0 .999-1V5.84A3.001 3.001 0 0 1 13 0a3 3 0 0 1 1.033 5.817v1.175a3 3 0 0 1-2.997 3l-6.037.006a1 1 0 0 0-.999 1zM3 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm10 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path></svg>
+          </header>
+          <div class="card-content">
+            <div>
+              <p>A recommender system based on collaborative filtering, in which, given a matrix with the ratings of multiple user <i>i</i> on item <i>j</i>, it seeks to fill the gaps in the matrix, thus offering a recommendation of items to each user.
+                <br>With this, the aim is to be able to make an approximation of the valuation that the user would make, as accurate as possible to reality, in order to be able to select a posteriori, the items that the user will be more interested in, and thus achieve greater user satisfaction.
+                <br>The development is done in typescript and has a web user interface.</p>
+              <progress class="progress is-small is-info" value="100" max="100">100%</progress>
+            </div>
+          </div>
+        </a>
+      </div>
       <div class="cards">
         <div class="card double-card">
           <a href="https://github.com/FNDme/Sudoku">
